refactor: restructure Container and admin layout behavior
- Added w-full to Container to allow full-width alignment inside centered layout
- Removed opacity from text elements by isolating background opacity via CSS
- Reorganized post queries into new folder structure
- Created PostsListAdmin and admin route under /app/admin
- Improved loader and featured post components layout
- Added utility files for async delay and console logging

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   --background-1: #e9e9e9;
   --background-2: #f0f0f0;
   --background-3: #123;
-
+  --background-4: rgba(17, 34, 51, 0.756);
   /* Text Colors - Light Mode */
   --text-1: #191919;
   --text-2: #45556c;
@@ -31,11 +31,15 @@
     --background-2: #1f1f1f;
     --background-3: #ffffff;
 
+    --background-4: rgba(166, 166, 166, 0.677);
+
     --text-1: #dbdbdb;
     --text-2: #45556c;
     --text-3: #ffffff;
 
-    --markText-1:#d5d7db;
+    --text-4:#0c0c0c;
+
+    --markText-1:hsl(220, 8%, 85%);
     --markText-2:#d9dcde;
     --markText-3: #f3f3f3;
 
@@ -47,11 +51,12 @@
   --color-background-1: var(--background-1);
   --color-background-2: var(--background-2);
   --color-background-3: var(--background-3);
+  --color-background-4: var(--background-4);
 
   --color-text-1: var(--text-1);
   --color-text-2: var(--text-2);
   --color-text-3: var(--text-3);
-  --color-text-4: var(--text-4)
+  --color-text-4: var(--text-4);
 }
 
 body {
@@ -135,5 +140,9 @@ h2 {
 }
 h3 {
   @apply font-bold;
+  font-size: clamp(0.9rem, 2.5vw, 1.0rem);
+}
+
+.clamp-a {
   font-size: clamp(0.9rem, 2.5vw, 1.0rem);
 }
